--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -31,7 +31,7 @@ header{
 
 h1{
 	display: flex;
-	padding-left: 1rem;
+	padding-left: 2rem;
 }
 
 h1 a{
@@ -46,16 +46,21 @@ h1 a{
 /*form wrapper styles*/
 main, footer{
 	/* background: red; */
-	padding: 2rem 1rem;
+	padding: 2rem 2rem;
 }
 
 h2{
-	font-size: 1.5rem;
+	font-size: 1.8rem;
+	margin-bottom: .8rem;
+}
+
+p{
+	color: #111111;
 }
 
 p, .contact-form label{
 	font-size: 1.2rem;
-	line-height: 1.5
+	line-height: 1.5;
 }
 
 /*contact details styles*/
@@ -82,7 +87,8 @@ form{
 	display: flex;
 	flex-direction: column;
 	padding: 1rem;
-	box-shadow: 0 0 12px rgb(244, 244, 244);
+	border-radius: 5px;
+	box-shadow: 0 0 12px rgb(0,0,0,.2);
 }
 
 form label{
