--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ li{
 }
 
 .container{
-	padding: 2rem 1rem;
+	padding: 2rem 2rem;
 }
 
 /*header section styles*/
@@ -91,7 +91,7 @@ header{
 
 h1{
 	display: flex;
-	padding-left: 1rem;
+	padding-left: 2rem;
 }
 
 h1 a{
@@ -113,8 +113,9 @@ h1 a{
 
 }
 
-h2{
+.hero-section h2{
 	font-size: 2.1rem;
+	margin-bottom: 1rem;
 	text-transform: capitalize;
 }
 
@@ -134,7 +135,6 @@ h2{
 .service-container{
 	background: white;
 	padding: 3rem 2rem;
-	box-shadow: 0 0 12px rgb(0,0,0,.2);
 }
 
 .service-container:first-child{
@@ -150,11 +150,11 @@ h2{
 	margin: 0 0 2rem;
 	text-align: center;
 	border-radius: 5px; 
+	box-shadow: 0 0 12px rgb(0,0,0,.2);
 }
 
 .project-container{
 	padding: 3rem;
-	box-shadow: 0 0 12px rgb(244, 244, 244);
 }
 
 .project-container:last-child{
