--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,73 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	
 }
 
 /*general styles*/
-body{
-	font-family: 'Source Sans Pro', sans-serif;
+body {
+	font-family: "Inter", sans-serif;
 }
 
-h3{
+h3 {
+	color: #464764;
 	font-size: 1.6rem;
 	text-transform: capitalize;
 	/*padding: 1rem 0 .2em;*/
 }
 
-p{
-	font-size: 1.2rem;
-	line-height: 1.5
+h2,
+h3 {
 }
 
-a{
+p {
+	font-size: 1.2rem;
+	line-height: 2;
+	color: #718096 /* #3d3d3d */;
+	font-weight: 400;
+}
+
+a {
 	text-decoration: none;
 	color: white;
-	
 }
 
-a.btn{
+a.btn {
 	color: black;
 	font-size: 1rem;
-	padding: .7rem 1rem;
 	background: transparent;
 	text-transform: uppercase;
-	letter-spacing: .1rem;
+	letter-spacing: 0.1rem;
 	display: inline-block;
 	cursor: pointer;
-	border-radius: 5px;
+	text-align: center;
+	font-weight: 600;
 }
 
-a.btn.hero-cta{
-	color: white;
-	background: black;
+a.btn.hero-cta {
+	color: #fff;
+	border-radius: 6px;
+	padding: 18px 24px /* 0.7rem 1rem */;
+	background: #333996;
+	font-weight: 600;
+	box-shadow: 0 4px 14px 0 rgba(137, 147, 164, 0.49);
 }
 
-a.btn:not(.hero-cta){
-	margin: .5rem 0;
-	transition: .3s background-color;
+a.btn:not(.hero-cta) {
+	margin: 0.5rem 0;
 	position: relative;
-	border: 2px solid black;
 	outline: none;
+	border-radius: ;
+	border-bottom: 2px solid #333996;
 }
 
-a.btn:not(.hero-cta):hover{
+/* a.btn:not(.hero-cta):hover {
 	color: white;
-}
+} */
 
-a.btn:not(.hero-cta)::before{
+/* a.btn:not(.hero-cta)::before {
 	content: "";
 	width: 40%;
 	opacity: 0;
@@ -67,59 +78,66 @@ a.btn:not(.hero-cta)::before{
 	left: 0;
 	right: 0;
 	transition: 0.25s all;
-	
 }
 
-a.btn:not(.hero-cta):hover::before{
+a.btn:not(.hero-cta):hover::before {
 	width: 100%;
 	z-index: -1;
 	opacity: 1;
-}
+} */
 
-li{
+li {
 	list-style: none;
 }
 
-.container{
+.container {
 	padding: 2rem 2rem;
 }
 
 /*header section styles*/
-header{
-	background: #F7F7F7;
+header {
+	background: #333996;
 }
 
-h1{
+h1 {
 	display: flex;
 	padding-left: 2rem;
 }
 
-h1 a{
+h1 a {
 	display: flex;
 }
 
-.logo img{
+.logo img {
 	width: 100px;
 	max-width: 100px;
 }
 
 /*hero section styles*/
-.hero-section{
+.hero-section {
 	text-align: center;
+	background: #f9fafb;
 }
 
-.hero-section .container{
+.hero-section .container {
 	padding: 3rem 1rem 3rem;
-
 }
 
-.hero-section h2{
+.hero-section h2 {
+	color: #333996;
 	font-size: 2.1rem;
+	font-weight: 900;
 	margin-bottom: 1rem;
 	text-transform: capitalize;
 }
 
-.hero-texts, .project-details{
+.hero-texts p {
+	width: 90%;
+	margin: 0 auto;
+}
+
+.hero-texts,
+.project-details {
 	margin-bottom: 2rem;
 }
 
@@ -128,166 +146,177 @@ h1 a{
 }*/
 
 /*services section styles*/
-.services-section{
-	background: #F7F7F7;
-}
-
-.service-container{
+.services-section {
 	background: white;
-	padding: 3rem 2rem;
 }
 
-.service-container:first-child{
+.service-container {
+	background: inherit /* white */;
+}
+
+.service-container:first-child {
 	margin-top: 0;
 }
 
-.service-container:last-child{
+.service-container:last-child {
 	margin-bottom: 0;
 }
 
 /*project section styles*/
-.project-container, .service-container{
+/* .projects-section {
+	color: white;
+	background: #333996;
+} */
+
+.project-container,
+.service-container {
 	margin: 0 0 2rem;
+	padding: 2rem;
 	text-align: center;
-	border-radius: 5px; 
-	box-shadow: 0 0 12px rgb(0,0,0,.2);
+	border-radius: 6px;
+	box-shadow: 0 0 1.5rem rgba(22, 28, 45, 0.09)
+		/* 0 0 12px rgb(0, 0, 0, 0.2) */;
 }
 
-.project-container{
-	padding: 3rem;
+.project-container h3,
+.service-container h3 {
+	margin-bottom: 1rem;
 }
 
-.project-container:last-child{
+/* .projects-section p,
+.projects-section h3 {
+	color: white;
+}
+ */
+.project-container:last-child {
 	margin-bottom: 0;
 }
 
-
 /*footer section styles*/
-footer{
+footer {
 	color: white;
 	background: #454545;
 }
 
-footer a, footer p, footer li{
+footer a,
+footer p,
+footer li,
+footer h3 {
+	color: inherit;
 	font-size: 1.4rem;
 	text-transform: capitalize;
 }
 
-footer li{
+footer li {
 	line-height: 2rem;
 }
 
-footer .social, footer .contact-us{
+footer .social,
+footer .contact-us {
 	margin: 1rem 0;
-} 
+}
 
-.social-links{
+.social-links {
 	display: flex;
 	width: 25%;
 	justify-content: space-between;
 }
 
-footer .container p.copyright{
+footer .container p.copyright {
 	text-align: center;
 	font-size: 1.2rem;
 }
 
 /*MEDIA QUERIES*/
-@media screen and (min-width:760px)  {
-	h2{
+@media screen and (min-width: 760px) {
+	h2 {
 		font-size: 2.7rem;
 	}
-	h3{
+	h3 {
 		font-size: 2rem;
 	}
-	p{
+	p {
 		font-size: 1.6rem;
 	}
 
-	a.btn{
+	a.btn {
 		font-size: 1.2rem;
 	}
-		
 }
 
 /*header section mq*/
-@media screen and (min-width:760px) {
-	h1{
+@media screen and (min-width: 760px) {
+	h1 {
 		justify-content: center;
 	}
-
 }
 
 /*hero section mq*/
-@media screen and (min-width:760px)  {
-	.hero-section p{
+@media screen and (min-width: 760px) {
+	.hero-section p {
 		padding: 1rem;
 	}
 
-	.hero-section .container{
+	.hero-section .container {
 		padding: 4rem;
 	}
 
-	.hero-container{
+	.hero-container {
 		width: 87%;
 		margin: 0 auto;
 	}
 
-	.service-container, .project-container{
+	.service-container,
+	.project-container {
 		width: 80%;
-		margin: .5rem auto 3rem;
-	
+		margin: 0.5rem auto 3rem;
 	}
-	
-	
 }
 
 /*services section mq*/
 @media screen and (min-width: 760px) {
-	.services-section .container{
+	.services-section .container {
 		display: flex;
 		flex-wrap: wrap;
 	}
 
-	.service-container{
+	.service-container {
 		flex-basis: 600px;
 	}
 
-	.service-container:nth-child(3){
+	.service-container:nth-child(3) {
 		margin-bottom: 0;
 	}
 }
 /*portfolio section mq*/
 @media screen and (min-width: 760px) {
-	.portfolio-section .container{
+	.portfolio-section .container {
 		display: flex;
 		flex-wrap: wrap;
 	}
 
-	.project-container{
+	.project-container {
 		padding: 4rem;
 		flex-basis: 600px;
 	}
 
-	.project-container:nth-child(3){
+	.project-container:nth-child(3) {
 		margin-bottom: 0;
 	}
 
-	.project-container h3{
+	.project-container h3 {
 		padding: 0;
 	}
 }
 
-
 /*footer section mq*/
 @media screen and (min-width: 760px) {
-	footer .container{
+	footer .container {
 		width: 95%;
 		margin: 0 auto;
 	}
 
-	.social-links{
+	.social-links {
 		width: 15%;
-	
 	}
 }
