--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,9 @@ body {
 h3 {
 	color: #464764;
 	font-size: 1.6rem;
+	line-height: 1.5;
 	text-transform: capitalize;
 	/*padding: 1rem 0 .2em;*/
-}
-
-h2,
-h3 {
 }
 
 p {
@@ -61,7 +58,24 @@ a.btn:not(.hero-cta) {
 	margin: 0.5rem 0;
 	position: relative;
 	outline: none;
-	border-bottom: 2px solid #333996;
+	position: relative;
+}
+
+a.btn:not(.hero-cta)::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	top: 25px;
+	width: 100%;
+	height: 5px;
+	border-radius: 6px;
+	background: #333996;
+	transition: width 0.5s ease;
+}
+
+a.btn:not(.hero-cta):hover::before {
+	/* width: 100%; */
 }
 
 /* a.btn:not(.hero-cta):hover {
