--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -1,149 +1,176 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	
 }
 
 /*general styles*/
-body{
-	font-family: 'Source Sans Pro', sans-serif;
+body {
+	font-family: "Inter", sans-serif;
 }
 
-li{
+li {
 	list-style: none;
 }
 
-h3{
-	font-size: 1.4rem;
+h3 {
+	/* font-size: 1.6rem;
+	text-transform: capitalize; */
+
+	color: #464764;
+	font-size: 1.6rem;
+	line-height: 1.5;
 	text-transform: capitalize;
 }
-
 
 /* .wrapper{
 	padding: 2rem 1rem;
 } */
 
 /*header section styles*/
-header{
-	background: #F7F7F7;
+header {
+	background: #333996;
 }
 
-h1{
+h1 {
 	display: flex;
-	padding-left: 2rem;
+	padding-left: 1rem;
 }
 
-h1 a{
+h1 a {
 	display: flex;
 }
 
-.logo img{
+.logo img {
 	width: 100px;
 	max-width: 100px;
 }
 
 /*form wrapper styles*/
-main, footer{
+main,
+footer {
 	/* background: red; */
-	padding: 2rem 2rem;
+	padding: 2rem 1rem;
 }
 
-h2{
-	font-size: 1.8rem;
-	margin-bottom: .8rem;
+h2 {
+	/* font-size: 1.8rem;
+	margin-bottom: 0.8rem; */
+
+	color: #333996;
+	font-size: 2.1rem;
+	font-weight: 900;
+	margin-bottom: 1rem;
 }
 
-p, .contact-form label{
-	font-size: 1.4rem;
-	line-height: 1.5;
+p,
+.contact-form label {
+	font-size: 1.2rem;
+	line-height: 2;
+	color: #718096 /* #3d3d3d */;
+	font-weight: 400;
 }
 
 /*contact details styles*/
-.contact-details{
+.contact-details {
 	/* background: blue; */
 	margin-top: 1rem;
 }
 
-.contact-detail{
+.contact-detail {
 	margin-bottom: 1rem;
 }
 
-.contact-detail:not(:nth-child(2)) p{
+.contact-detail:not(:nth-child(2)) p {
 	text-transform: capitalize;
 }
 
-.contact-left, .contact-right{
+.contact-left,
+.contact-right {
 	/* background: green; */
 	margin-bottom: 2rem;
 }
 
 /*contact form styles*/
-form{
+form {
 	display: flex;
 	flex-direction: column;
 	padding: 1rem;
 	border-radius: 5px;
-	box-shadow: 0 0 12px rgb(0,0,0,.2);
+	box-shadow: 0 0 1.5rem rgba(22, 28, 45, 0.09);
 }
 
-form label{
+form label {
 	text-transform: capitalize;
 }
 
 .input-container {
-	display:  flex;
+	display: flex;
 	flex-direction: column;
 	margin-bottom: 1rem;
 }
 
-input, button, textarea{
+input,
+button,
+textarea {
 	border: none;
 	border-radius: 5px;
-	padding: .5rem;
+	padding: 0.5rem;
 }
 
-input, textarea{
-	background: #F7F7F7;
+input,
+textarea {
+	background: #f7f7f7;
 	border: 2px solid transparent;
 	outline: none;
 }
 
-textarea{
+textarea {
 	resize: none;
 	height: auto;
 }
 
-input:focus, 
-input:active, 
-textarea:focus, 
-textarea:active{
+input:focus,
+input:active,
+textarea:focus,
+textarea:active {
 	border-color: black;
 }
 
-
-
-button{
-	color: black;
+button {
+	/* color: black;
 	font-size: 1rem;
-	padding: .7rem 1rem;
+	padding: 0.7rem 1rem;
 	background: transparent;
 	text-transform: uppercase;
-	letter-spacing: .1rem;
+	letter-spacing: 0.1rem;
 	display: inline-block;
 	cursor: pointer;
-	margin: .5rem 0;
-	transition: .3s background-color;
+	
+	transition: 0.3s background-color;
 	position: relative;
 	border: 2px solid black;
-	outline: none;
+	outline: none; */
+	color: #fff;
+	font-size: 1rem;
+	font-weight: 600;
+	background: transparent;
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
+	display: inline-block;
+	cursor: pointer;
+	text-align: center;
+	font-weight: 600;
+	border-radius: 6px;
+	padding: 18px 24px /* 0.7rem 1rem */;
+	background: #333996;
+	margin: 0.5rem 0;
+	box-shadow: 0 4px 14px 0 rgba(137, 147, 164, 0.49);
 }
 
-button:hover{
-	color: white;
-}
-
-button::before{
+/* button::before {
 	content: "";
 	width: 40%;
 	opacity: 0;
@@ -154,110 +181,115 @@ button::before{
 	left: 0;
 	right: 0;
 	transition: 0.25s all;
-	
 }
 
-button:hover::before{
+button:hover::before {
 	width: 100%;
 	z-index: -1;
 	opacity: 1;
 }
-
+ */
 /*footer section styles*/
-footer{
+footer {
 	color: white;
-	background: #454545;
+	/* background: #454545; */
+	background: #333996;
 }
 
-footer a, footer p, footer li{
+footer a,
+footer p,
+footer li,
+footer h3 {
+	color: inherit;
 	font-size: 1.4rem;
 	text-transform: capitalize;
 }
 
-footer a{
+footer a {
 	color: white;
 }
 
-footer li{
+footer li {
 	line-height: 2rem;
 }
 
-footer .social, footer .contact-us{
+footer .social,
+footer .contact-us {
 	margin: 1rem 0;
-} 
+}
 
-.social-links{
+.social-links {
 	display: flex;
 	width: 25%;
 	justify-content: space-between;
 }
 
-footer .container p.copyright{
+footer .container p.copyright {
 	text-align: center;
 	font-size: 1.2rem;
 }
 
 /*MEDIA QUERIES*/
 /*header section styles*/
-@media screen and (min-width:760px) {
-	h1{
+@media screen and (min-width: 760px) {
+	h1 {
 		justify-content: center;
 	}
 }
 
-
 /*main section styles*/
-@media screen and (min-width:760px)  {
-	main{
+@media screen and (min-width: 760px) {
+	main {
 		display: flex;
 		justify-content: space-between;
 	}
 
-	main, footer{
+	main,
+	footer {
 		padding: 2rem 4rem;
 	}
 
-	main .contact-left{
+	main .contact-left {
 		width: 600px;
 	}
 
-	main .contact-right{
+	main .contact-right {
 		width: calc(100% - 700px);
 	}
 
-	.contact-left, .contact-right{
+	.contact-left,
+	.contact-right {
 		margin-bottom: 0;
 	}
 
-	h2{
+	h2 {
 		font-size: 2.8rem;
-		margin-bottom: .5rem;
+		margin-bottom: 0.5rem;
 	}
 
-	p, .contact-form label, button{
+	p,
+	.contact-form label,
+	button {
 		font-size: 1.4rem;
-		line-height: 1.5
+		line-height: 1.5;
 	}
 
-	.contact-detail{
+	.contact-detail {
 		margin-bottom: 2rem;
 	}
 
-	.contact-detail:first-child{
+	.contact-detail:first-child {
 		margin-top: 2rem;
 	}
 }
 
 /*footer section mq styles*/
-@media screen and (min-width:760px){
-	footer h3{
+@media screen and (min-width: 760px) {
+	footer h3 {
 		font-size: 2rem;
-	}	
+	}
 
-	.social-links{
+	.social-links {
 		width: 15%;
-	
 	}
 }
-
-
