--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ header {
 
 h1 {
 	display: flex;
-	padding-left: 2rem;
+	padding-left: 1rem;
 }
 
 h1 a {
@@ -210,7 +210,7 @@ h1 a {
 /*footer section styles*/
 footer {
 	color: white;
-	background: #454545;
+	/* background: #454545; */
 	background: #333996;
 }
 
