--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -59,6 +59,7 @@ h2 {
 	/* font-size: 1.8rem;
 	margin-bottom: 0.8rem; */
 
+	line-height: 1.5;
 	color: #333996;
 	font-size: 2.1rem;
 	font-weight: 900;
