--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -55,17 +55,6 @@ footer {
 	padding: 2rem 1rem;
 }
 
-h2 {
-	/* font-size: 1.8rem;
-	margin-bottom: 0.8rem; */
-
-	line-height: 1.5;
-	color: #333996;
-	font-size: 2.1rem;
-	font-weight: 900;
-	margin-bottom: 1rem;
-}
-
 p,
 .contact-form label {
 	font-size: 1.2rem;
@@ -97,6 +86,7 @@ p,
 /*contact form styles*/
 form {
 	display: flex;
+	font-size: 1.2rem;
 	flex-direction: column;
 	padding: 1rem;
 	border-radius: 5px;
@@ -123,9 +113,10 @@ textarea {
 
 input,
 textarea {
+	font-size: inherit;
+	color: #718096;
 	background: #f7f7f7;
 	border: 2px solid transparent;
-	outline: none;
 }
 
 textarea {
@@ -137,7 +128,7 @@ input:focus,
 input:active,
 textarea:focus,
 textarea:active {
-	border-color: black;
+	border-color: #464764;
 }
 
 button {
