--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a.btn.hero-cta {
 a.btn:not(.hero-cta) {
 	font-size: 1.2rem;
 	margin: 0.5rem 0;
-	padding: 0.2rem;
+	padding: 0.3rem;
 	position: relative;
 	outline: none;
 	position: relative;
@@ -316,13 +316,17 @@ footer .container p.copyright {
 		flex-basis: 600px;
 	}
 
+	.service-container:nth-child(2) {
+		margin-top: 0;
+	}
+
 	.service-container:nth-child(3) {
 		margin-bottom: 0;
 	}
 }
 /*portfolio section mq*/
 @media screen and (min-width: 760px) {
-	.portfolio-section .container {
+	.projects-section .container {
 		display: flex;
 		flex-wrap: wrap;
 	}
